--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<link rel="stylesheet" href="style.css">
 
+<html>
+
+<head>
+	<title>Jennifer Moundanos</title>
+	</head>
+	<body>
+		<h1>All About Jennifer</h1>
+		<p>
+		</p>
+		<a href=""></a>
+		<img src="">
+	</body>
+</html>
